AdvancedNetworkSpecialist/59_VPCInterfaceEndPointForSQS/59_SecurityGroups.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description:  This template create all Security Groups

Parameters:
  # Global parameters
  Bucket:
    Default: "hawkfund-cloudformation"
    Description: CloudFormation buket URL
    Type: String
  BucketKey:
    Default: "59_VPCInterfaceEndPointForSQS"
    Description: Key to find object in the bucket
    Type: String
  BucketObject:
    Default: "Data.json"
    Description: "File to store data in the bucket"
    Type: String
  EnvironmentName:
    AllowedValues: [ "dev", "test", "prod" ]
    ConstraintDescription: "Must specify dev, test or prod"
    Default: "dev"
    Description: "Environment name that prefix all resources"
    Type: String    
  ProjectName:
    Default: "ANS"
    Description: "Project name that prefix all resources"
    Type: String
  SaveInS3File:
    AllowedValues: [ "false", "true" ]
    Default: "false"
    Description: "Save resources information in s3 file"
    Type: String
  
  # Stack parameters
  ApplicationInstanceVpcId:
    Type: String
  ApplicationInstanceIngressCidrIp:
    Default: "10.10.0.0/16"
    Type: String
  BastionInstanceVpcId:
    Type: String
  BastionInstanceIngressCidrIp:
    Default: "0.0.0.0/0"
    Type: String
  InterfaceVpcId:
    Type: String
  InterfaceIngressCidrIp:
    Default: "10.10.0.0/16"
    Type: String

Conditions:
  saveInS3File: !Equals [ !Ref SaveInS3File, "true"]

Resources:
  BastionInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for Bastion"
      GroupName: "BastionInstanceSecurityGroup"
      SecurityGroupIngress:
        - CidrIp: !Ref BastionInstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref BastionInstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: EnvironmentName
          Value: !Ref EnvironmentName
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-Bastion-SG"
        - Key: ProjectName
          Value: !Ref ProjectName
      VpcId: !Ref BastionInstanceVpcId

  BastionInstanceSecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: saveInS3File 
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:EC2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:Bastion"
      Value: !Ref BastionInstanceSecurityGroup

  ApplicationInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security Group for A Application"
      GroupName: "ApplicationASecurityGroup"
      SecurityGroupIngress:
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref ApplicationInstanceIngressCidrIp
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: EnvironmentName
          Value: !Ref EnvironmentName
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-Application-SG"
        - Key: ProjectName
          Value: !Ref ProjectName
      VpcId: !Ref ApplicationInstanceVpcId

  ApplicationInstanceSecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: saveInS3File
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:EC2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:Application"
      Value: !Ref ApplicationInstanceSecurityGroup

  SQSInterfaceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Allow HTTPS traffic from the VPC'
      SecurityGroupIngress:
        - CidrIp: !Ref InterfaceIngressCidrIp
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: EnvironmentName
          Value: !Ref EnvironmentName
        - Key: Name
          Value:  !Sub "${ProjectName}-${EnvironmentName}-SQSInterface-SG"
        - Key: ProjectName
          Value: !Ref ProjectName
      VpcId: !Ref InterfaceVpcId

  SQSInterfaceSecurityGroupToS3:
    Type: AWS::CloudFormation::CustomResource
    Condition: saveInS3File
    DeletionPolicy: Retain
    UpdateReplacePolicy: Retain
    Properties:
      ServiceToken: !Join [ ":", [ "arn:aws:lambda", !Sub "${AWS::Region}", !Sub "${AWS::AccountId}", "function:EC2ResourceToS3"]]
      ServiceTimeout: 60
      Bucket: !Ref Bucket
      BucketKey: !Ref BucketKey
      BucketObject: !Ref BucketObject
      Region: !Ref AWS::Region
      ResourceType: "SecurityGroup"
      Key: !Sub "${AWS::Region}:${ProjectName}:${EnvironmentName}:EC2:SecurityGroup:SQSInterface"
      Value: !Ref SQSInterfaceSecurityGroup

Outputs:
  ApplicationInstanceSecurityGroupId:
    Description: "Security GroupId for the Application"
    Value: !GetAtt ApplicationInstanceSecurityGroup.GroupId
  BastionInstanceSecurityGroupId:
    Description: "Security GroupId for the Bastion"
    Value: !GetAtt BastionInstanceSecurityGroup.GroupId
  InterfaceSecurityGroupId:
    Description: "Security GroupId for the SQS"
    Value: !GetAtt SQSInterfaceSecurityGroup.GroupId
